data/derived/comb/progs/unify/prog6464.ml.out
Characters 174-175:
  let seen' = append(seen,h) in
                          ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
